// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`US-LOOP-123 CLI audit snapshots > freezes EN and ZH output for a healthy handoff, an external lookalike, and an absent legacy cycle 1`] = `
"Worktree audit

  total: 2
  loop: 1
  manual: 0
  external: 1
  active: 0
  disposable candidates: 0
  preserved: 1
  ephemeral branches: 0

preserved_needs_review
  /fake/repo/.roll/loop/worktrees/delta-handoff  US-LOOP-123

external_unmanaged
  /fake/repo/.roll/loop/worktrees/cycle-lookalike
"
`;

exports[`US-LOOP-123 CLI audit snapshots > freezes EN and ZH output for a healthy handoff, an external lookalike, and an absent legacy cycle 2`] = `
"工作树审计

  总计: 2
  受管: 1
  手动: 0
  外部: 1
  活跃: 0
  可释放候选: 0
  保留: 1
  临时分支: 0

preserved_needs_review
  /fake/repo/.roll/loop/worktrees/delta-handoff  US-LOOP-123

external_unmanaged
  /fake/repo/.roll/loop/worktrees/cycle-lookalike
"
`;

exports[`US-LOOP-123 CLI audit snapshots > freezes EN and ZH output for an unregistered projected member 1`] = `
"Worktree audit

  total: 1
  loop: 1
  manual: 0
  active: 1
  disposable candidates: 0
  preserved: 1
  ephemeral branches: 0

active
  /fake/repo/.roll/loop/worktrees/delta-unregistered  US-LOOP-123  dirty=?, merge=?
"
`;

exports[`US-LOOP-123 CLI audit snapshots > freezes EN and ZH output for an unregistered projected member 2`] = `
"工作树审计

  总计: 1
  受管: 1
  手动: 0
  活跃: 1
  可释放候选: 0
  保留: 1
  临时分支: 0

active
  /fake/repo/.roll/loop/worktrees/delta-unregistered  US-LOOP-123  dirty=?, merge=?
"
`;

exports[`US-LOOP-123 projection-backed audit fixture matrix > does not promote an unregistered cycle-looking directory into managed ownership 1`] = `
{
  "ephemeralBranches": [],
  "generatedAt": "2026-07-08T12:00:00.000Z",
  "records": [
    {
      "active": true,
      "ahead": 0,
      "branch": undefined,
      "cycleId": undefined,
      "dirtyTracked": false,
      "dirtyUntracked": false,
      "disposition": "active",
      "head": "head-1",
      "memberLocator": "delta-d-1",
      "mergeEvidence": {
        "kind": "none",
      },
      "outcome": undefined,
      "owner": "loop",
      "path": "/fake/repo/.roll/loop/worktrees/delta-d-1",
      "reason": "projection retains an active delivery reservation",
      "registration": "registered",
      "releaseVerdict": "preserve_active",
      "runId": "delta-d-1",
      "runState": "active_unstarted",
      "storyId": "US-LOOP-123",
    },
    {
      "active": false,
      "ahead": 0,
      "branch": undefined,
      "cycleId": undefined,
      "dirtyTracked": false,
      "dirtyUntracked": false,
      "disposition": "external_unmanaged",
      "head": "spoof",
      "mergeEvidence": {
        "kind": "none",
      },
      "outcome": undefined,
      "owner": "external",
      "path": "/fake/repo/.roll/loop/worktrees/cycle-spoof",
      "reason": "external worktree; not managed by loop",
      "storyId": undefined,
    },
  ],
  "repo": "repo",
  "schema": 1,
  "summary": {
    "active": 1,
    "disposableCandidates": 0,
    "ephemeralBranches": 0,
    "external": 1,
    "loop": 1,
    "manual": 0,
    "preserved": 1,
    "total": 2,
  },
}
`;
